test_output_3.log
> Task :clearReports
> Task :clean
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava
C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\CommonStepDefinitions.java:7: error: cannot find symbol
import org.calidadsoftware.tasks.Login;
                                ^
  symbol:   class Login
  location: package org.calidadsoftware.tasks
C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\CommonStepDefinitions.java:33: error: cannot find symbol
        actor.attemptsTo(Login.with("standard_user", "secret_sauce"));
                         ^
  symbol:   variable Login
  location: class CommonStepDefinitions
2 errors

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/David%20Gomez/Desktop/proyectos/Calidad/AutomatizacionCalidadFE/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\CommonStepDefinitions.java:7: error: cannot find symbol
  import org.calidadsoftware.tasks.Login;
                                  ^
    symbol:   class Login
    location: package org.calidadsoftware.tasks
  C:\Users\David Gomez\Desktop\proyectos\Calidad\AutomatizacionCalidadFE\src\test\java\org\calidadsoftware\stepdefinitions\CommonStepDefinitions.java:33: error: cannot find symbol
          actor.attemptsTo(Login.with("standard_user", "secret_sauce"));
                           ^
    symbol:   variable Login
    location: class CommonStepDefinitions
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
4 actionable tasks: 4 executed
